--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,59 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="64"
+    android:viewportHeight="64">
+  <group android:scaleX="0.6"
+      android:scaleY="0.6"
+      android:translateX="12.8"
+      android:translateY="12.8">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m11.54,32.64s-1.69,-6.12 -1,-10.43a10.71,10.71 0,0 1,2.94 -6.21s1.52,-5.79 10.68,-8.79 24.25,-1.44 27,10.79 1,15.62 1,15.62a3.45,3.45 0,0 1,2.25 4.38c-1,3.31 -5.68,3.25 -5.68,3.25a35,35 0,0 1,-2.73 3.33,8 8,0 0,1 -2.25,1.75s5.31,4.31 6.12,6.44 -0.37,3.94 -0.93,4.12 -2.19,1.13 -7.25,0.82 -5.13,-0.63 -7.5,-0.13a23.11,23.11 0,0 1,-7.19 0.42c-1.38,-0.32 -5.25,-1.82 -6.75,-1.94s-4.77,-0.06 -4.84,-1.06 1.19,-3.29 2.59,-5.17a10.54,10.54 0,0 1,2.75 -2.69,13.22 13.22,0 0,1 -4.57,-5.31s-3.87,1.06 -6.06,-3.25 1.42,-5.94 1.42,-5.94z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m12.91,31.58s-2.31,-6.75 -0.68,-9.94 1.77,-3.5 1.77,-3.5 2.81,-6.43 8.68,-8.37 14.32,-3.63 21.42,0.75 7.13,18.87 7.06,19.69 -0.25,0.87 -0.25,0.87a19.84,19.84 0,0 0,-3.18 -10.69c-3.44,-5.25 -7.57,-8.81 -15.44,-8.68s-14.69,6.29 -15.19,7.56 -0.94,2.12 -0.94,2.12 -0.87,-1.31 -1.06,-1.31 -0.69,0.25 -0.56,0.63 1.06,1.37 1.06,1.62a4.75,4.75 0,0 1,-0.25 0.94s-1.5,-1.38 -1.75,-1.19 -0.25,1 -0.25,1 1.44,1.5 1.38,1.69a16.46,16.46 0,0 0,-1.13 4.06,8 8,0 0,1 -0.69,2.75z"
+        android:fillColor="#7b5207"/>
+    <path
+        android:pathData="m13.29,34.52s0.81,2.31 1.25,3.37a6.91,6.91 0,0 1,0.5 1.94,3.87 3.87,0 0,1 -3.13,-2.31c-0.81,-2.13 1.09,-2.75 1.38,-3z"
+        android:fillColor="#fcd396"/>
+    <path
+        android:pathData="m51.16,35.21s-0.31,1.25 -0.68,2.62a7.46,7.46 0,0 1,-0.75 1.94s2.87,-0.19 3.25,-1.88a2.25,2.25 0,0 0,-1.82 -2.68z"
+        android:fillColor="#fcd396"/>
+    <path
+        android:pathData="m33.16,13.64c5.13,0 11.07,2.82 14.19,10.19s2.44,14.81 -2.06,18.94 -8.56,6.62 -16.19,5.44 -10.69,-5.44 -13,-10.69 -1.1,-23.75 17.06,-23.88z"
+        android:fillColor="#fcd396"/>
+    <path
+        android:pathData="m22.23,48c0.54,-0.4 3.81,2.94 11.18,2.19s8.44,-2.69 8.75,-2.69 5.44,3.81 6.13,5.37 0.56,2.63 0.25,2.69a4,4 0,0 1,-0.88 0s-3.18,-5.19 -3.81,-5.25 -0.81,0.13 -0.69,0.44 3.32,5 3.13,5.06 -0.75,0.56 -1.13,0.31 -2.87,-4.12 -3.16,-4.12 -1,0.18 -0.94,0.37 2.88,3.94 2.63,4.06a6.41,6.41 0,0 1,-1.44 0.13s-2.5,-3.69 -2.88,-3.69 -0.62,0.63 -0.62,0.63 2.19,3.25 1.94,3.25a21.07,21.07 0,0 0,-5.19 -0.63c-2.5,0.13 -4.44,1.13 -6.63,0.88s-4.87,-2 -7.02,-2.11 -4.19,-0.12 -4.25,-0.37 0.63,-3.52 4.63,-6.52z"
+        android:fillColor="#fab900"/>
+    <path
+        android:pathData="m21.23,21.83c-0.46,0 5.81,-1.25 6.12,-0.87s0.56,0.87 0.06,0.87 -5.25,1.17 -5.68,1.06 -0.44,-1.06 -0.5,-1.06z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m39.85,21.21c0.25,0 5.5,0.75 5.56,1.18s0.44,0.57 -0.18,0.63a45.42,45.42 0,0 1,-5.38 -0.88c-0.44,-0.14 0,-0.93 0,-0.93z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m23.66,23.71c3.44,-0.82 8.25,-0.44 8.07,5.68s-7.38,7.13 -10.82,4.69 -3.56,-8.87 2.75,-10.37z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m23.89,24.57c2.91,-0.69 7,-0.37 6.83,4.82s-6.25,6 -9.16,4 -3.02,-7.55 2.33,-8.82z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="m38.41,23.89c3,-1.58 7.94,0.13 8.13,5.69s-6.06,6.75 -9.19,4.19 -3.75,-7.31 1.06,-9.88z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m38.81,24.81c2.46,-1.31 6.57,0.1 6.72,4.7s-5,5.59 -7.6,3.47 -3.1,-6.05 0.88,-8.17z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="m24.54,28.14c0.91,-0.7 2.5,-0.43 2.56,0.75a1.7,1.7 0,0 1,-2.37 1.82c-1.57,-0.57 -0.73,-2.13 -0.19,-2.57z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m40.1,28.14c0.91,-0.7 2.5,-0.43 2.56,0.75a1.69,1.69 0,0 1,-2.37 1.82c-1.56,-0.57 -0.75,-2.13 -0.19,-2.57z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m31.79,36.39c0.27,0.06 3.87,2.19 4.37,1.88s0.13,-1.75 -0.5,-2.25 -0.56,-0.19 -0.62,-0.5a0.4,0.4 0,0 1,0.44 -0.5,2.75 2.75,0 0,1 2.12,2.31c0.31,1.88 -0.81,2.44 -2.31,2.06a13.56,13.56 0,0 1,-4.13 -2.31c-0.16,-0.25 0.32,-0.75 0.63,-0.69z"
+        android:fillColor="#1d1d1b"/>
+    <path
+        android:pathData="m26,41.27c0.43,-0.06 2.12,2.12 6.43,1.94a18.82,18.82 0,0 0,5 -0.75,0.93 0.93,0 0,1 0.75,0.87c-0.06,0.19 -2.87,1.38 -7.12,1 -4.47,-0.39 -5.69,-2.06 -5.81,-2.31s0.29,-0.69 0.75,-0.75z"
+        android:fillColor="#1d1d1b"/>
+  </group>
 </vector>
