Widget UI implemented.

--- a/app/src/main/res/xml-v31/character_widget_info.xml
+++ b/app/src/main/res/xml-v31/character_widget_info.xml
@@ -5,6 +5,8 @@
     android:minHeight="100dp"
     android:resizeMode="horizontal"
     android:widgetCategory="home_screen"
+    android:targetCellHeight="1"
+    android:targetCellWidth="3"
+    android:maxResizeHeight="100dp"
     android:previewImage="@raw/widget_preview">
-    <!-- TODO ADD Preview Image and Layout-->
 </appwidget-provider>
